fixed overflow problems

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -9,6 +9,7 @@
     #ffffff 100%
   );
   padding: 40px 5%;
+  overflow: hidden;
 }
 .mCarousel-item{
   position: relative;
